--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Shubham Shrivastav - Senior Full Stack Developer with 8+ years of experience in backend systems, AI integration, Node.js, Python, TypeScript, and scalable architecture">
+    <meta name="description" content="Shubham Shrivastav - Senior Full Stack Developer with 9+ years of experience in backend systems, AI integration, Node.js, Python, TypeScript, and scalable architecture">
     <meta name="keywords" content="Full Stack Developer, Senior Backend Engineer, Node.js, Python, AI Integration, TypeScript, Backend Development, Microservices, REST APIs, OpenAI, LangChain, Angular, React, Data Processing Pipelines">
     <title>Shubham Shrivastav | Full Stack Developer</title>
     <link rel="stylesheet" href="portfolio.css">
@@ -69,7 +69,7 @@
             <div class="about-content">
                 <div class="about-info">
                     <p>
-                        Senior Full Stack Developer with 8+ years of experience building scalable backend systems, AI-powered applications, and modern web architectures. Deep expertise in Node.js, Python, and TypeScript for backend services, with proven ability to architect microservices, REST APIs, and sophisticated data processing pipelines supporting millions of users.
+                        Senior Full Stack Developer with 9+ years of experience building scalable backend systems, AI-powered applications, and modern web architectures. Deep expertise in Node.js, Python, and TypeScript for backend services, with proven ability to architect microservices, REST APIs, and sophisticated data processing pipelines supporting millions of users.
                     </p>
                     <p>
                         I specialize in AI integration (OpenAI GPT-4, LangChain), performance optimization, and writing pragmatic, testable code. My work spans from backend architecture and data pipelines to full-stack features, consistently delivering measurable improvements in performance, scalability, and user experience.
@@ -200,9 +200,9 @@
                                 </div>
                                 <ul class="timeline-description">
                                     <li><strong>Led end-to-end ownership</strong> of complex backend projects including <strong>AI-powered analytics features</strong> and data processing systems, driving customer acquisition and retention while <strong>mentoring 5+ engineers</strong> on best practices, code reviews, and career development.</li>
-                                    <li>Architected and optimized <strong>Luzmo IQ</strong>, the flagship AI-powered analytics assistant enabling instant answers to data questions backed by interactive charts. Achieved <strong>40% performance improvement</strong> through <strong>smart tokenization (tiktoken)</strong>, intelligent query optimization, Redis caching, <strong>AI observability with LangChain</strong>, and privacy-preserving LLM integration patterns.</li>
-                                    <li>Designed and delivered the <strong>Summary Chart Widget</strong> with complete backend workflow, REST API endpoints, and <strong>sophisticated data aggregation pipelines</strong>, leveraging <strong>GPT-4</strong> to automatically generate contextual insights from dashboard visualizations while maintaining data privacy.</li>
-                                    <li><strong>Led system design and architecture</strong> for micro-frontend transition, achieving <strong>60% faster build times</strong>, improved developer velocity, and <strong>fault-tolerant architecture</strong> supporting millions of embedded analytics requests daily.</li>
+                                    <li>Architected and optimized <strong>AI-powered analytics assistant</strong> enabling instant answers to data questions backed by interactive charts. Achieved <strong>40% performance improvement</strong> through <strong>smart tokenization (tiktoken)</strong>, intelligent query optimization, Redis caching, <strong>AI observability with LangChain</strong>, and privacy-preserving LLM integration patterns.</li>
+                                    <li>Designed and delivered <strong>AI-powered data visualization features</strong> with complete backend workflow, REST API endpoints, and <strong>sophisticated data aggregation pipelines</strong>, leveraging <strong>GPT-4</strong> to automatically generate contextual insights from dashboard visualizations while maintaining data privacy.</li>
+                                    <li><strong>Led system design and architecture</strong> for micro-frontend transition, achieving <strong>60% faster build times</strong>, improved developer velocity, and <strong>fault-tolerant architecture</strong> supporting thousands of embedded analytics requests daily.</li>
                                     <li>Championed <strong>pragmatic, testable code</strong> and automation, implementing comprehensive testing frameworks (Jest, Cypress, Playwright) that increased code coverage from 65% to 92%, minimizing production issues with robust CI/CD pipelines.</li>
                                 </ul>
                             </div>
@@ -221,7 +221,7 @@
                                     <strong>Technical Environment:</strong> Node.js, Express, MongoDB, REST APIs, Microservices, Docker, GitHub Actions, AWS Lambda
                                 </div>
                                 <ul class="timeline-description">
-                                    <li>Architected and implemented <strong>scalable RESTful APIs and microservices</strong> using <strong>Node.js</strong> and <strong>Express</strong>, processing millions of API requests daily with 99.9% uptime, enabling rapid feature deployment and supporting application growth.</li>
+                                    <li>Architected and implemented <strong>scalable RESTful APIs and microservices</strong> using <strong>Node.js</strong> and <strong>Express</strong>, processing thousands of API requests daily with 99.9% uptime, enabling rapid feature deployment and supporting application growth.</li>
                                     <li>Engineered <strong>sophisticated data processing pipelines</strong> and <strong>data integration connectors</strong> for 5+ external platforms (BigQuery, Snowflake, PostgreSQL), enhancing platform versatility and enabling real-time analytics for thousands of customers.</li>
                                 </ul>
                             </div>
