--- a/timedial-privacy.html
+++ b/timedial-privacy.html
@@ -55,7 +55,7 @@
                 <div class="simple-meta">
                     <a href="mailto:shrivastava.shubham219@live.com">Email: shrivastava.shubham219@live.com</a>
                     <a href="tel:+918236028730">Phone: +91 8236028730</a>
-                    <span>Location: Lalitpur, India</span>
+                    <span>Address: 471, Infront of I.C.D. 3, Dam colony, Lalitpur, India (284403)</span>
                 </div>
             </div>
         </div>
