chore: update policy

--- a/timedial-support.html
+++ b/timedial-support.html
@@ -35,7 +35,7 @@
                     <span>Address: 471, Infront of I.C.D. 3, Dam colony, Lalitpur, India (284403)</span>
                 </div>
 
-                <h2>What to Include</h2>z`
+                <h2>What to Include</h2>
                 <ul>
                     <li>macOS version</li>
                     <li>TimeDial version</li>
