--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
                             <li>Compact mode and menu-bar-only footprint for quick checks throughout the day.</li>
                         </ul>
                         <div class="project-links">
+                            <a href="https://apps.apple.com/us/app/timedial/id6758935499" target="_blank" class="project-link">
+                                <i class="fab fa-apple"></i> View on App Store
+                            </a>
                             <a href="https://github.com/shubham-shrivastava/timedial" target="_blank" class="project-link">
                                 <i class="fab fa-github"></i> View on GitHub
                             </a>
