--- a/timedial-support.html
+++ b/timedial-support.html
@@ -49,6 +49,9 @@
                     <li>Menu bar icon missing: Enable it via System Settings → Menu Bar → Allow in Menu Bar → TimeDial.</li>
                 </ul>
 
+                <h2>Mac App Store</h2>
+                <p>Download TimeDial from the Mac App Store: <a href="https://apps.apple.com/us/app/timedial/id6758935499" target="_blank" rel="noopener">https://apps.apple.com/us/app/timedial/id6758935499</a></p>
+
                 <h2>GitHub</h2>
                 <p>You can open an issue here: <a href="https://github.com/shubham-shrivastava/timedial/issues" target="_blank" rel="noopener">https://github.com/shubham-shrivastava/timedial/issues</a></p>
             </div>
