--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                     <h3>Full Stack Developer</h3>
                                     <span class="timeline-date">2019-06 - Present</span>
                                 </div>
-                                <h4>Luzmo (Formerly CumuLio)</h4>
+                                <h4>Luzmo (Formerly Cumul.io)</h4>
                                 <p class="timeline-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
                                 <div class="tech-environment">
                                     <strong>Technical Environment:</strong> Node.js, Express, Python, FastAPI, TypeScript, REST APIs, PostgreSQL, MongoDB, Redis, Microservices, OpenAI GPT-4, LangChain, Angular 18, NgRx, NX Monorepo, Docker, AWS, CI/CD
@@ -215,7 +215,7 @@
                                     <h3>Backend Developer</h3>
                                     <span class="timeline-date">2018-01 - 2019-06</span>
                                 </div>
-                                <h4>Luzmo (Formerly CumuLio)</h4>
+                                <h4>Luzmo (Formerly Cumul.io)</h4>
                                 <p class="timeline-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
                                 <div class="tech-environment">
                                     <strong>Technical Environment:</strong> Node.js, Express, MongoDB, REST APIs, Microservices, Docker, GitHub Actions, AWS Lambda
