--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="about-buttons">
                         <a href="resume.html" class="btn primary" target="_blank">View Resume</a>
-                        <a href="Shubham Shrivastav - Full Stack Developer.pdf" class="btn secondary" download>
+                        <a href="Shubham Shrivastav - Senior Full Stack Developer.pdf" class="btn secondary" download>
                             <i class="fas fa-download"></i> Download Resume
                         </a>
                     </div>
